# Jamoma

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Jamoma_doxyfile.txt  TopLevelDoxygenLayout.xml  Toplevel_doxyfile  Toplevel_doxyfile.txt  Update.sh  build.rb  build.sh  contributing.md  readme-old.md  readme.md  readme.txt  tag.rb
Doxygen/: Jamoma_doxyfile.txt
Doxygen/definitions/: srcguide.dox  srcguideFoundation.dox  srcguideGraph.dox  srcguideImplementationsMax.dox  srcguideImplementationsOthers.dox
Doxygen/images/: jamoma-frameworks.eps  jamoma-frameworks.graffle
Doxygen/intro_chapters/: 10-Introduction.dox  20-Datatypes.dox  30-UsingObjects.dox  50-ExtendingObjects.dox  65-IntegrationTesting.dox  A-Acknowledgements.dox  C-StyleGuide.dox  D-FutureTopics.dox  D-OsxDevUsingXcode.dox
Shared/CMake/toolchains/: arm-linux-gnueabihf.cmake
Tools/: JamomaGitter.maxpat  build.rb  installer.rb  makeAllSubmodulesWritable.rb
Tools/debugging/: AddJamomaPath.maxpat
Tools/installertools/: ReadMe.Template.rtf  Uninstall.command  installer.rb
Tools/installertools/packageMakerScript.pmdoc/: 01distro.xml  02dependencies.xml  index.xml
Tools/support/: jamomalib.rb
UserLib/Jamoma.Ircam.FTM/: .gitignore
UserLib/Orphans/Deflache/drunkpath/: jmod.drunkpath.xml
UserLib/Orphans/Deflache/tconvolution/: jmod.tconvolution~.xml
UserLib/Orphans/MGT/analyzer~/: jalg.analyzer~.maxpat
UserLib/Orphans/PhysicalInterfaces/OSCemote/: jmod.OSCremote.xml
UserLib/Orphans/PhysicalInterfaces/Phidgets/phidgets.accelerometer/: jmod.phidgets.accelerometer.xml
UserLib/Orphans/PhysicalInterfaces/Vicon/: jmod.QVicon2OSC.maxpat
UserLib/Orphans/PhysicalInterfaces/Wii/: jalg.wii.maxpat  jmod.wii.maxpat  jmod.wii.xml
UserLib/misc/: GenerateHTML.maxpat  README  jamoma-userlib-overview.maxpat
definitions/: srcguideAudioGraph.dox  srcguideDSP.dox  srcguideGraph.dox  srcguideImplementations.dox  srcguideImplementationsMax.dox  srcguideModular.dox
intro_chapters/: 01-Introduction.dox  10-Introduction.dox  20-Datatypes.dox  30-UsingObjects.dox  50-ExtendingObjects.dox  60-UnitTesting.dox  B-appendix_tags.dox  D-FutureTopics.dox
script/: build.sh  depinstall.sh
